fix overflow background

--- a/public/assets/stylesheets/main.css
+++ b/public/assets/stylesheets/main.css
@@ -22,14 +22,14 @@ main {
   border-color: #6b8ca5;
 }
 
-body {
-  background-color: #aacee3 !important;
+body.std {
+  background-color: #aacee3;
 }
 
 html, body.rsvp {
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#9abfd9+0,ccdfec+36,ffffff+100 */
 
-  background-color: #9abfd9;
+  background-color: #9abfd9
   background-image: -webkit-linear-gradient(top, #9abfd9 0%, #ccdfec 36%, #ffffff 100%);
   background-image:    -moz-linear-gradient(top, #9abfd9 0%, #ccdfec 36%, #ffffff 100%);
   background-image:      -o-linear-gradient(top, #9abfd9 0%, #ccdfec 36%, #ffffff 100%);
